# ARES

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  main.py  pyproject.toml
src/ares/core/: agent.py  memory.py  planner.py  registry.py
src/ares/tools/: base.py  curl.py  gobuster.py  nikto.py  nmap.py
