[project]
name = "ares"
version = "0.1.0"
description = "Autonomous Red-teaming & Exploitation System"
readme = "README.MD"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
